--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,20 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <!-- DEPENDENCIES -->
-  <dependencies>
-	<dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.34</version>
-	</dependency>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+		</dependency>
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.7</version>
+		</dependency>
+
+	</dependencies>
   
   <build>
     <sourceDirectory>src</sourceDirectory>
